Update our buildSrc maven api dependencies
Old dependencies use the outdated artifacts, from the outdated groups,
from a decade ago.